# NaviPod

./: Cargo.toml  README.md  cross-compile.sh
src/: config.rs  main.rs
src/audio/: mod.rs  resampler.rs
src/clickwheel/: mod.rs
src/db/: mod.rs
src/player/: mod.rs
src/subsonic/: mod.rs
src/system/: mod.rs
src/ui/: mod.rs
ui/: main.slint
ui/themes/: theme.slint
ui/views/: keyboard.slint  library.slint  menu.slint  now_playing.slint
